# partiql-playground

./: Cargo.toml
migrations/2024-08-30-145023_create_test_table/: up.sql
src/: main.rs  schema.rs
