[package]
name = "partiql-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.43.0"
tokio = { version = "1.40.0", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres"] } # Choose the feature for your preferred backend
regex = "1.10.6"
